Change: new post, UI changes
- new post : New site, new year
- added images in post markup and change css to make images display nicely
- change twitter handle

--- a/.scripts/config.json
+++ b/.scripts/config.json
@@ -35,6 +35,11 @@
 			"output": "./assets/images/feed.jpeg",
 			"quality": 85,
 			"resize": [200, 200]
+		},
+		{
+			"entry": "./src/img/heuristic--caching-1.jpg",
+			"output": "./assets/images/heuristic--caching-1.jpg",
+			"quality": 85			
 		}
 	]
 }
