--- a/.scripts/config.json
+++ b/.scripts/config.json
@@ -56,6 +56,16 @@
 			"entry": "./src/img/curious-case-of-csp-2.png",
 			"output": "./assets/images/curious-case-of-csp-2.png",
 			"quality": 85
+		},
+		{
+			"entry": "./src/img/jwt-structure.jpg",
+			"output": "./assets/images/jwt-structure.jpg",
+			"quality": 85
+		},
+		{
+			"entry": "./src/img/jwt-encoded-composition.png",
+			"output": "./assets/images/jwt-encoded-composition.png",
+			"quality": 85
 		}
 	]
 }
