--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
 		"less": "node .scripts/less.js",
 		"serve": "eleventy --serve",
 		"build": "DEBUG=* eleventy",
-		"assets": "yarn bundle && yarn less && yarn favicons && yarn images",
+		"assets": "npm run bundle && npm run less && npm run favicons && npm run images",
 		"validate:feed": "npx feed-validator _site/feed.xml --no-showfeed",
-		"prerelease": "yarn clean",
-		"release": "yarn assets && yarn build",
+		"prerelease": "npm run clean",
+		"release": "npm run assets && npm run build",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
